@@ -62,7 +62,7 @@ class Monitor:
         if not self.options.nodaemon:
             log_handler = logging.FileHandler(self.options.logdir + "/spvd.log")
         else:
-            log_handler = logging.FileHandler('/dev/stdout')
+            log_handler = logging.StreamHandler(sys.stdout)
         self.log_format = logging.Formatter('%(asctime)s %(levelname)s %(message)s')
         log_handler.setFormatter(self.log_format)
         self.log.addHandler(log_handler)
