@@ -2,7 +2,7 @@ spvd (0.8.0~dev-1) unstable; urgency=low
 
   * New upstream release.
 
- -- Philippe Bridant <philippe.bridant@smartjog.com>  Mon, 10 May 2010 15:55:36 +0200
+ -- Rémi Cardona <remi.cardona@smartjog.com>  Wed, 12 May 2010 15:14:54 +0200
 
 spvd (0.7.0-1) unstable; urgency=low
 
